<resources>
    <string name="activate_services_activate_all_services_button_title">Activate all services</string>
    <string name="activate_services_activate_later_button_title">Later</string>
    <string name="activate_services_activate_single_service">Activate service</string>
    <string name="activate_services_activation_button_title">Service activation</string>
    <string name="activate_services_choose_individually">Choose services individually</string>
    <string name="activate_services_data_birthday">Date of birth *</string>
    <string name="activate_services_data_city">City *</string>
    <string name="activate_services_data_country">Country or region *</string>
    <string name="activate_services_data_firstname">First name *</string>
    <string name="activate_services_data_house_number">House number *</string>
    <string name="activate_services_data_lastname">Surname *</string>
    <string name="activate_services_data_missing">Data missing</string>
    <string name="activate_services_data_postcode">Postcode *</string>
    <string name="activate_services_data_required">* Mandatory fields</string>
    <string name="activate_services_data_save_button">Save</string>
    <string name="activate_services_data_street">Street *</string>
    <string name="activate_services_data_title">Personal data</string>
    <string name="activate_services_data_validation_error">Please fill in all mandatory fields.</string>
    <string name="activate_services_deactivate_single_service">Deactivate service</string>
    <string name="activate_services_description">Select the services which you wish to activate for your vehicle.</string>
    <string name="activate_services_fin">VIN</string>
    <string name="activate_services_finished">Finish activation</string>
    <string name="activate_services_headline">Activate services</string>
    <string name="activate_services_instance_vehicle_error">No corresponding vehicle data available.</string>
    <string name="activate_services_license_plate">Licence plate</string>
    <string name="activate_services_loading_services">Loading services</string>
    <string name="activate_services_notifications_title">Notifications</string>
    <string name="activate_services_no_data">No data</string>
    <string name="activate_services_no_service_activable">There are no services which can be activated as all services available for activation were already activated.</string>
    <string name="activate_services_pending_active">Activation in progress...</string>
    <string name="activate_services_pending_inactive">Deactivation in progress...</string>
    <string name="activate_services_preconditions">Pre-requisites</string>
    <string name="activate_services_preconditions_missing">Information is missing which is required for the activation of some services. Would you now like to provide the missing data\?</string>
    <string name="activate_services_purchase_button">Buy</string>
    <string name="activate_services_purchase_license">Licence required</string>
    <string name="activate_services_reload_services">Re-load services</string>
    <string name="activate_services_request_explanation">Your vehicle was successfully linked. Now activate your services in order to receive full access to the functions of your vehicle.</string>
    <string name="activate_services_request_title">Activate your services</string>
    <string name="activate_services_save_success">Saving successful</string>
    <string name="activate_services_single_services_title">Activate services individually</string>
    <string name="activate_services_success_hint">Many thanks for your activation – we will now activate the services for your vehicle.</string>
    <string name="activate_services_title">Services</string>
    <string name="activate_services_trust_level_insufficient">Trust level is insufficient</string>
    <string name="activate_services_user_description">Your user profile is incomplete. Please complete your personal data in order to receive access to the functions of your vehicle.</string>
    <string name="activate_services_user_later_button">Later</string>
    <string name="activate_services_user_start_button">Enter data</string>
    <string name="activate_services_user_title">Missing user data\nCreate a user profile</string>
    <string name="activate_services_vehicle_country">Vehicle registration country</string>
    <string name="activate_services_vehicle_setup">Vehicle setup</string>
    <string name="agreements_btn_later">Later</string>
    <string name="agreements_btn_save">Save</string>
    <string name="agreements_error_no_pdf_reader">Please install a PDF-Reader in order to read the Terms of Use.</string>
    <string name="agreements_mandatory">* Mandatory</string>
    <string name="agreements_reject_message">Do you really wish to reject the general user agreement for Mercedes me connect\? This will affect your activated services</string>
    <string name="agreements_updated_successful">Thank you for updating our terms of use</string>
    <string name="agreement_accept">Accept</string>
    <string name="agreement_accept_with_name">I accept the %1$s</string>
    <string name="agreement_activate_all">Activate all services</string>
    <string name="agreement_btn_cancel">No</string>
    <string name="agreement_btn_confirm">Yes</string>
    <string name="agreement_confirm_error">Not all terms of use were able to be accepted.</string>
    <string name="agreement_description_fallback">I agree to the following Terms and Conditions.</string>
    <string name="agreement_description_one_bnb">I want to activate all Mercedes me connect Services and I agree to the Terms and Conditions.</string>
    <string name="agreement_description_one_bnb_it">Pursuant to and for the effects of art. 1341 and 1342 of the Italian Civil Code I declare to specifically and expressly accept the following paragraphs: E1, J, L, M, O after having carefully read the content of the corresponding clauses in the document.</string>
    <string name="agreement_description_one_bnb_part_agreements">Terms and Conditions</string>
    <string name="agreement_description_product_improvement">I agree to the usage of my data for product improvements.</string>
    <string name="agreement_description_third_party">I agree to the following Terms and Conditions.</string>
    <string name="agreement_document_group_1">Terms of use*</string>
    <string name="agreement_document_group_2">EULA language services</string>
    <string name="agreement_document_group_3">Product improvement</string>
    <string name="agreement_document_group_4">Terms and Conditions</string>
    <string name="agreement_document_type_additional_it">Special user agreement (Italy only)</string>
    <string name="agreement_document_type_one_bnb">General user agreement</string>
    <string name="agreement_document_type_one_bnb_link_1">Terms and Conditions</string>
    <string name="agreement_document_type_product_improvement">User agreement – product improvement</string>
    <string name="agreement_document_type_product_improvement_link_1">Contribution to product improvement</string>
    <string name="agreement_document_type_third_party">EULA – Nuance / data protection – NUANCE</string>
    <string name="agreement_document_type_third_party_link_1">End user license agreement for Nuance</string>
    <string name="agreement_document_type_third_party_link_2">Consent under data protection law for Nuance</string>
    <string name="agreement_hint_cancel">No services can be activated.</string>
    <string name="agreement_message">Do you agree to the Mercedes me connect terms of use\?</string>
    <string name="agreement_read">Read</string>
    <string name="agreement_reject">Decline</string>
    <string name="agreement_title">Terms of use</string>
    <string name="agreement_update">Update</string>
    <string name="app_exit_dialog_message">Are you sure you want to exit the application\?</string>
    <string name="app_family_app_store">App Store</string>
    <string name="app_family_open_app_store_error">This app is not yet available in %1$s.</string>
    <string name="app_family_play_store">Play Store</string>
    <string name="app_family_short_description">Brief description</string>
    <string name="app_family_title">Mercedes me app family</string>
    <string name="assign_action_activation_button">Check activation</string>
    <string name="assign_action_bottom_button">Search for a Mercedes-Benz dealer</string>
    <string name="assign_action_bottom_description">Have your vehicle linked by a Mercedes-Benz dealer near you.</string>
    <string name="assign_action_bottom_title">Do you need help\?</string>
    <string name="assign_action_enter_vin">Enter your VIN</string>
    <string name="assign_action_fin_button">Enter VIN</string>
    <string name="assign_action_fin_description">Generate an access code.</string>
    <string name="assign_action_fin_headline">Vehicle pairing via VIN</string>
    <string name="assign_action_info_call">Info Call</string>
    <string name="assign_action_pair_without_qr_hint">PAIRING WITHOUT QR-CODE</string>
    <string name="assign_action_qr_button">Start QR scan</string>
    <string name="assign_action_qr_description">Conveniently with your mobile phone.</string>
    <string name="assign_code_vin_button">Generate code</string>
    <string name="assign_code_vin_description">Please enter your 17-digit vehicle identification number in order to generate the allocation code.</string>
    <string name="assign_code_vin_placeholder">Vehicle identification number</string>
    <string name="assign_code_vin_title">Vehicle identification number</string>
    <string name="assign_instruction_info_call_description">If you don\'t have the multimedia system MBUX feel free to start a call to the Mercedes-Benz Customer Assistance Center via Info Call button on the roof control unit of your vehicle.</string>
    <string name="assign_instruction_info_call_title">Vehicle pairing via info call</string>
    <string name="assign_instruction_qr_description">There are two ways to use the vehicle assignment via QR-Code. You can either use it with the multimedia system MBUX or to get access to a vehicle as a second user.</string>
    <string name="assign_instruction_qr_mbux">Not sure if you have the multimedia system MBUX inside your vehicle\?</string>
    <string name="assign_instruction_qr_title">Vehicle pairing via QR-Code</string>
    <string name="assign_instruction_retail_description">Alternatively, you can of course pair your vehicle with the help of your Mercedes-Benz retailer.</string>
    <string name="assign_instruction_retail_title">Retail Service</string>
    <string name="assign_instruction_vin_description">The Vehicle Identification Number (VIN) is a 17-digit, unique number used to identify your vehicle. You can find it in your vehicle registration document or in the door frame of your vehicle.</string>
    <string name="assign_instruction_vin_title">Vehicle pairing via VIN</string>
    <string name="assign_later">Later</string>
    <string name="assign_start">Start linking</string>
    <string name="assign_text">In order to enjoy the full scope of functionality which the app offers, you must first link your vehicle with your profile.</string>
    <string name="assign_title">Registration successful.\nSelect your vehicle.</string>
    <string name="login_legal">Legal information</string>
    <string name="verification_home_description">In order to be able to subsequently use the Mercedes me connect services to the full, a person check is required for security reasons. You can either carry this out now or at a later time conveniently in the app using your identity documents or your passport.</string>
    <string name="verification_home_headline">Authenticate yourself</string>
    <string name="verification_home_later_button">Later</string>
    <string name="verification_info_start_button">Start Identity Check now</string>
</resources>